k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: kagoo-app
          image: mcdocker643/erp-kagoo:v0.01 # à changer erp-kagoo - kagoo-os
          ports:
            - containerPort: 8000
          imagePullPolicy: Always
