k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    app: app
  ports:
  - name: app
    protocol: TCP 
    port: 8000
    targetPort: 8000
